# krousinator

./: Cargo.toml  README.md  TODO.txt  flake.nix  generated.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/axum_register/: temp.rs
common/src/registry/: context.rs  entry.rs  handle.rs  handler_registry.rs  krousinator_interface.rs  mod.rs  producer.rs
common/src/types/: mod.rs  types.rs
dummy/: Cargo.toml
dummy/src/: main.rs
injector/: Cargo.toml
injector/src/: main.rs
installer/: Cargo.toml
installer/src/: main.rs
krous_core/: Cargo.toml
krous_core/src/: lib.rs  types.rs
krous_core/src/api/: mod.rs
krous_core/src/api/axum/: auto_reg.rs  mod.rs
krous_core/src/api/model/: meta.rs  mod.rs  readme.MD
krous_core/src/api/model/traits/: handlers.rs  mod.rs  producers.rs
krous_core/src/context/: context.rs  hiveContext.rs  hive_context.rs  mod.rs  shared.rs
krous_core/src/registry/: mod.rs  registry.rs
krous_macros/: Cargo.toml
krous_macros/src/: lib.rs
kroushive/: Cargo.toml
kroushive/src/: context.rs  main.rs  registry.rs  types.rs
kroushive/src/models/: file_transfer.rs  mod.rs  recv_identity_req.rs  recv_reverse_execute.rs  recv_system_info.rs
kroushive/src/models/recv/: mod.rs  recv_identity_req.rs  recv_reverse_execute.rs  recv_system_info.rs
kroushive/src/models/send/: mod.rs  send_reverse_execute.rs
kroushive/src/models/trait/: handler.rs  produce.rs
krousinator/: Cargo.toml  build.rs
krousinator/src/: generated.rs  lib.rs  main.rs
krousinator/src/models/: RULES.MD
krousinator/src/models/recv/: mod.rs  recv_auth_challenge.rs  recv_identity_response.rs  recv_reverse_execute.rs  recv_system_info.rs  req_auth_challenge.rs  req_identity_response.rs  req_reverse_execute.rs  req_system_info.rs
krousinator/src/models/send/: mod.rs  producer.rs  send_identity_req.rs  send_spy_model.rs
krousinator/src/orchestrator/: default.rs  mod.rs
krousinator/src/registry/: mod.rs
nix/: default.nix
src/: main.rs
src/models/recv/: conform_response.rs  handle.rs  handle_test.rs  mod.rs  req_reverse_execute.rs  req_system_info.rs
src/models/send/: mod.rs  producer.rs  send_confirm_response.rs  send_model_traits.rs  send_spy_model.rs  send_system_info.rs  spy_model.rs
src/registry/: entry.rs  handle_macro.rs  handler_registry.rs  krousinator_interface.rs  mod.rs
test_dbus/: Cargo.toml
test_dbus/src/: main.rs
