[package]
name = "krousinator"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.5.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] } 
futures-util = "0.3"
inventory = "0.3"
sysinfo = "0.35.1"
whoami = "1.5"