[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] } 
futures-util = "0.3"
inventory = "0.3"
async-trait = "0.1.88"


