[package]
name = "krous_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
krous_core = { path = "../krous_core" }

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
colored = "3.0.0"
# tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] } 
# axum = { version = "0.8.4", features = ["macros"] }
