[package]
name = "kroushive"
version = "0.1.0"
edition = "2021"

[dependencies]
krous_macros = { path = "../krous_macros" }
common = { path = "../common" }
openssl = { version = "0.10.73", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] } 
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
