[package]
name = "krousinator"
version = "0.1.0"
edition = "2021"



[dependencies]
common = { path = "../common" }
krous_macros = { path = "../krous_macros" }
openssl = { version = "0.10.73", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.5.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] } 
futures-util = "0.3"
inventory = "0.3"
sysinfo = "0.35.1"
whoami = "1.5"
once_cell = "1.21.3"
async-trait = "0.1.80"
uuid = { version = "1.4", features = ["v4", "serde"] }
colored = "3.0.0"

